[package]
name = "rsgm_networks"
description = "rsgm networks"
version = "0.0.1"
keywords = []
categories = []
repository = "https://github.com/stites/yodel"
edition = "2018"
license = "MIT"

include = [
  "networks/*.json",
]

[lib]
path = "src/lib.rs"

[dependencies]
include-flate = { version = "0.2.0", features = ["stable"] }
rsgm = { git = "https://github.com/neuppl/rsgm" }
strum = "0.25"
strum_macros = "0.25"